@@ -32,7 +32,7 @@ Clear the instrument and load default configuration:
 .br
 \fIoutputs:\fR All outputs set to drive high-z loads to TTL levels.
 .TP
-\fB\-e\fR, \fB\-\-display-string\fR "string"
+\fB\-e\fR, \fB\-\-display\-string\fR "string"
 Display string on the front panel LCD.  Strings greater than 20 characters
 will be truncated.  
 Spaces are stripped so use the underline character to separate words.
@@ -42,42 +42,42 @@ An empty string clears the display.
 Enable the front panel.
 .SH "OPTIONS, OUTPUT"
 .TP
-\fB\-o\fR, \fB\-\-out-chan\fR t0|a|b|ab|c|d|cd
+\fB\-n\fR, \fB\-\-out\-chan\fR t0|a|b|ab|c|d|cd
 Select an output channel for one of the output configuration commands.
 .TP
-\fB\-d\fR, \fB\-\-get-delay\fR
-Get delay configuration for channel specified with --out-chan.
+\fB\-d\fR, \fB\-\-get\-delay\fR
+Get delay configuration for channel specified with \-\-out\-chan.
 Delay is expressed in seconds.
 .TP
-\fB\-D\fR, \fB\-\-set-delay\fR chan,secs
-Set delay configuration for channel specified with --out-chan.
+\fB\-D\fR, \fB\-\-set\-delay\fR chan,secs
+Set delay configuration for channel specified with \-\-out\-chan.
 The delay is relative to the specified channel, and must include
 units: s, ms, us, ns, ps).
 .TP
-\fB\-q\fR, \fB\-\-get-out-mode\fR
-Get output mode for channel specified with --out-chan.
+\fB\-q\fR, \fB\-\-get\-out\-mode\fR
+Get output mode for channel specified with \-\-out\-chan.
 .TP
-\fB\-Q\fR, \fB\-\-set-out-mode\fR ttl|nim|ecl|var
-Set output mode for channel specified with --out-chan.
+\fB\-Q\fR, \fB\-\-set\-out\-mode\fR ttl|nim|ecl|var
+Set output mode for channel specified with \-\-out\-chan.
 If \fIttl\fR, \fInim\fR, or \fIecl\fR is selected, the polarity is selected
-with the --set-out-polarity options.
+with the \-\-set-out-polarity options.
 If \fIvar\fR is selected, the output amplitude and offsets may be
-set with the --set-out-ampl and --set-out-offset options.
+set with the \-\-set\-out\-ampl and \-\-set\-out\-offset options.
 .TP
-\fB\-g\fR, \fB\-\-get-out-ampl\fR
-Get output amplitude in volts for channel specified with --out-chan.
+\fB\-g\fR, \fB\-\-get\-out\-ampl\fR
+Get output amplitude in volts for channel specified with \-\-out\-chan.
 .TP
-\fB\-G\fR, \fB\-\-set-out-ampl\fR ampl
+\fB\-G\fR, \fB\-\-set\-out\-ampl\fR ampl
 Set output amplitude in volts for channel specified with --out-chan
 if the output is in variable mode.  The maximum amplitude plus offset
 is limited to plus or minus 4VDC, while the minimum is limited to 
 plus or minus 0.1VDC.
 .TP
 \fB\-f\fR, \fB\-\-get-out-offset\fR
-Get output offset in volts for channel specified with --out-chan.
+Get output offset in volts for channel specified with \-\-out\-chan.
 .TP
-\fB\-F\fR, \fB\-\-set-out-offset\fR offset
-Set output offset in volts for channel specified with --out-chan
+\fB\-F\fR, \fB\-\-set\-out\-offset\fR offset
+Set output offset in volts for channel specified with \-\-out\-chan
 if the output is in variable mode.
 For pulses which have a rising edge output, the offset is the voltage 
 between the lowest output level and ground.
@@ -89,35 +89,35 @@ pulse, while an ECL output is described as a -0.8VDC offset with
 a 1.0VDC amplitude.
 .TP
 \fB\-p\fR, \fB\-\-get-out-polarity\fR
-Get output polarity for channel specified with --out-chan.
+Get output polarity for channel specified with \-\-out\-chan.
 .TP
-\fB\-P\fR, \fB\-\-set-out-polarity\fR +|-
-Set output polarity for channel specified with --out-chan.
+\fB\-P\fR, \fB\-\-set\-out\-polarity\fR +|-
+Set output polarity for channel specified with \-\-out\-chan.
 .TP
-\fB\-y\fR, \fB\-\-get-out-z\fR
-Get output impedence for channel specified with --out-chan.
+\fB\-y\fR, \fB\-\-get\-out\-z\fR
+Get output impedence for channel specified with \-\-out\-chan.
 .TP
-\fB\-Y\fR, \fB\-\-set-out-z\fR hi|lo
-Set termination impedence for channel specified with --out-chan
+\fB\-Y\fR, \fB\-\-set\-out\-z\fR hi|lo
+Set termination impedence for channel specified with \-\-out\-chan
 to \fIlo\fR to drive a 50 ohm load, or \fIhi\fR to drive a high
 impedence load.
 .SH "OPTIONS, TRIGGER"
 .TP
-\fB\-x\fR, \fB\-\-single-shot\fR
+\fB\-x\fR, \fB\-\-single\-shot\fR
 Trigger the instrument one time.  The instrument must be in single shot
 trigger mode.
 .TP
-\fB\-m\fR, \fB\-\-get-trig-mode\fR
+\fB\-m\fR, \fB\-\-get\-trig\-mode\fR
 Get trigger mode.
 .TP
-\fB\-M\fR, \fB\-\-set-trig-mode\fR int|ext|ss|bur
+\fB\-M\fR, \fB\-\-set\-trig\-mode\fR int|ext|ss|bur
 Set trigger mode to \fIinternal\fR (int), \fIexternal\fR (ext),
 \fIsingle-shot\fR (ss), or \fIburst\fR (bur).
 .TP
-\fB\-t\fR, \fB\-\-get-trig-rate\fR
+\fB\-t\fR, \fB\-\-get\-trig\-rate\fR
 Get the trigger rate.
 .TP
-\fB\-t\fR, \fB\-\-set-trig-rate\fR freq
+\fB\-t\fR, \fB\-\-set\-trig\-rate\fR freq
 Set the trigger rate to a aule in the range of 0.001Hz to 1.000MHz.
 The precision is 0.001Hz below 10Hz, or 4 digits if above 10Hz.
 The internal rate generator will settle to the programmed value within
@@ -126,23 +126,23 @@ be expected from the programmed value during the 2 second settling period.
 Depending on the application, it may be useful to select single-shot trigger
 mode during the settling time.
 .TP
-\fB\-s\fR, \fB\-\-get-trig-slope\fR
+\fB\-s\fR, \fB\-\-get\-trig\-slope\fR
 Get the trigger slope.
 .TP
-\fB\-S\fR, \fB\-\-set-trig-slope\fR rising|falling
+\fB\-S\fR, \fB\-\-set\-trig\-slope\fR rising|falling
 Set the trigger slope condition for external triggers.
 .TP
-\fB\-b\fR, \fB\-\-get-burst-count\fR
+\fB\-b\fR, \fB\-\-get\-burst\-count\fR
 Get burst count.
 .TP
-\fB\-B\fR, \fB\-\-set-burst-count\fR count
+\fB\-B\fR, \fB\-\-set\-burst\-count\fR count
 Set the number of pulses (2-32766) which will be in each burst of pulses 
 when in the burst mode.
 .TP
-\fB\-z\fR, \fB\-\-get-trig-z\fR
+\fB\-z\fR, \fB\-\-get\-trig\-z\fR
 Get impedence of external trigger input.
 .TP
-\fB\-Z\fR, \fB\-\-set-trig-z\fR hi|lo
+\fB\-Z\fR, \fB\-\-set\-trig\-z\fR hi|lo
 Set impedence of external trigger input to \fIlo\fR (50 ohm)
 or \fIhi\fR (1 Mohm).
 .SH FILES
